added audio files

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div>
             <!--responsive-->>
             <audio id="resp">
-                <source src="./assets/audio/resp.mp3." type="audio/mp3">
+                <source src="./assets/audio/resp.mp3" type="audio/mp3">
             </audio>
             <!--software-->
             <audio id="soft">
@@ -86,7 +86,7 @@
             </audio>
             <!--container-->
             <audio id="cont">
-                <source src="./assets/audio/cont.mp3 type="audio/mp3">
+                <source src="./assets/audio/cont.mp3" type="audio/mp3">
             </audio>
             <!--bootstarp-->
             <audio id="boot">
@@ -97,7 +97,7 @@
 
 
 
-        <script src="assets/javascript/game.js"></script>
+        <script src="/assets/javascript/game.js"></script>
 
     </body>
 
