Build the Fisrt Version of Js File

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
                     <!--Wins counter Container-->
                     <div class="menu">
-                        <h3>WINS :
+                        <h3>WINS_SCORE :
                             <span id="wincpt"></span>
                         </h3>
                     </div>
                     <!--Loss counter Container-->
                     <div class="menu">
-                        <h3>LOSSES:
+                        <h3>LOSSES_SCORE :
                             <span id="lostcpt"></span>
                         </h3>
                     </div>
@@ -55,7 +55,7 @@
                     <!--Wrong guesses container-->
                     <div class="menu">
                         <h3>WRONG LETTERS LIST:
-                            <span id="playerguesses"></span>
+                            <span id="playerletterguesses"></span>
                         </h3>
                     </div>
                 </div>
