changed the background colors and added some js Attribut

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <div class="container">
 
                 <!--Changing Image based on correct answers-->
-                <h2>Press Any Key To Guess This Word!</h2>
+                <h2 id="message">Press Any Key To Guess This Word!</h2>
                 <div>
                     <img id="image" src="./assets/image/200.webp" width="30%" height="200">
                 </div>
 
                 <!--Current Word Container-->
                 <div>
-                    <h3 id="currentword">_ _ _ _ _ _</h3>
+                    <h3 id="currentword"> _ _ _ _ _</h3>
                 </div>
                 <div id="scoreboard">
                     <!--Guesses left Container-->
@@ -56,6 +56,9 @@
                     <div class="menu">
                         <h3>WRONG LETTERS LIST:
                             <span id="playerletterguesses"></span>
+                        </h3>
+                    </div>
+            
                         </h3>
                     </div>
                 </div>
