modified the game Fuction Code by adding more comment to be displayed

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
             <div class="container">
 
                 <!--Changing Image based on correct answers-->
-                <h2 id="message">Press Any Key To Guess This Word!</h2>
+                <h2 id="message">Press Any Key To Guess The Word!</h2>
+                <h3 id="message2"></h3><hr>
                 <div>
-                    <img id="image" src="./assets/image/200.webp" width="30%" height="200">
+                    <img id="image" src="./assets/image/luck.gif" width="50%" height="200">
                 </div>
 
                 <!--Current Word Container-->
