Modified Js file by adding more Attribut for the interaction deleted some images amd reorganized the Audio files

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <h3 id="message2"></h3><hr>
                 <div>
                     <img id="image" src="./assets/image/luck.gif" width="50%" height="200">
+                    
                 </div>
 
                 <!--Current Word Container-->
@@ -101,7 +102,7 @@
 
 
 
-        <script src="/assets/javascript/game.js"></script>
+        <script src="./assets/javascript/game.js"></script>
 
     </body>
 
