modified the HTML file by adding more display message

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <!--Changing Image based on correct answers-->
                 <h2 id="message">Press Any Key To Guess The Word!</h2>
                 <h3 id="message2"></h3><hr>
+                <h3 id="message3"></h3><hr>
                 <div>
                     <img id="image" src="./assets/image/luck.gif" width="50%" height="200">
                     
